# hypothesis-type-checker

./: .gitignore  README.md  TODO  classify_hypotheses.py  compare_results.py  fetch_papers.py  hypothesis_model.py  main.py  pyproject.toml  test_description.py  test_examples.py
data/: abstracts.json  classifications_abstract.json  classifications_pdf.json  comparison_summary.json  comparison_summary.txt
data/arxiv/cond-mat/: abstracts.json  classifications_abstract.json  classifications_pdf.json
experiments/gpt-5-hypothesis-tree/: analysis.md  classifications_abstract.json  classifications_pdf.json
