[project]
name = "hypothesis-type-checker"
version = "0.1.0"
description = " Checks the type of hypotheses in papers from OpenReview"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.3.0",
    "openreview-py>=1.52.7",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "weave>=0.52.9",
    "matplotlib>=3.9.0",
]
